==> ROBOTIS-GIT/OpenCR/arduino/opencr_arduino/opencr/libraries/I2Cdev/I2Cdev.cpp <==
#include "I2Cdev.h"
#include <Wire.h>

int8_t I2Cdev::readBytes(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint8_t *data, uint16_t timeout) {
    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.print("I2C (0x");
        Serial.print(devAddr, HEX);
        Serial.print(") reading ");
        Serial.print(length, DEC);
        Serial.print(" bytes from 0x");
        Serial.print(regAddr, HEX);
        Serial.print("...");
    #endif

    int8_t count = 0;
    uint32_t t1 = millis();

    #if (I2CDEV_IMPLEMENTATION == I2CDEV_ARDUINO_WIRE)

            // Arduino v1.0.1+, Wire library
            // Adds official support for repeated start condition, yay!

            // I2C/TWI subsystem uses internal buffer that breaks with large data requests
            // so if user requests more than BUFFER_LENGTH bytes, we have to do it in
            // smaller chunks instead of all at once
            for (uint8_t k = 0; k < length; k += min(length, BUFFER_LENGTH)) {
                Wire.beginTransmission(devAddr);
                Wire.write(regAddr);
                Wire.endTransmission();
                Wire.beginTransmission(devAddr);
                Wire.requestFrom(devAddr, (uint8_t)min(length - k, BUFFER_LENGTH));
        
                for (; Wire.available() && (timeout == 0 || millis() - t1 < timeout); count++) {
                    data[count] = Wire.read();
                    #ifdef I2CDEV_SERIAL_DEBUG
                        Serial.print(data[count], HEX);
                        if (count + 1 < length) Serial.print(" ");
                    #endif
                }
            }

    #elif (I2CDEV_IMPLEMENTATION == I2CDEV_BUILTIN_FASTWIRE)

            HAL_StatusTypeDef ret;

            ret = HAL_I2C_Mem_Read(&I2cHandle, (uint16_t)(devAddr << 1), regAddr, I2C_MEMADD_SIZE_8BIT, data, length, timeout);

            if( ret == HAL_OK )
            {
              count = length;
            }
            else
            {
                count = -1;
            }
    #endif

    // check for timeout
    if (timeout > 0 && millis() - t1 >= timeout && count < length) count = -1; // timeout

    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.print(". Done (");
        Serial.print(count, DEC);
        Serial.println(" read).");
    #endif

    return count;
}

int8_t I2Cdev::readWords(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint16_t *data, uint16_t timeout) {
    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.print("I2C (0x");
        Serial.print(devAddr, HEX);
        Serial.print(") reading ");
        Serial.print(length, DEC);
        Serial.print(" words from 0x");
        Serial.print(regAddr, HEX);
        Serial.print("...");
    #endif

    int8_t count = 0;
    uint32_t t1 = millis();

    #if (I2CDEV_IMPLEMENTATION == I2CDEV_ARDUINO_WIRE)

            // Arduino v1.0.1+, Wire library
            // Adds official support for repeated start condition, yay!

            // I2C/TWI subsystem uses internal buffer that breaks with large data requests
            // so if user requests more than BUFFER_LENGTH bytes, we have to do it in
            // smaller chunks instead of all at once
            for (uint8_t k = 0; k < length * 2; k += min(length * 2, BUFFER_LENGTH)) {
                Wire.beginTransmission(devAddr);
                Wire.write(regAddr);
                Wire.endTransmission();
                Wire.beginTransmission(devAddr);
                Wire.requestFrom(devAddr, (uint8_t)(length * 2)); // length=words, this wants bytes
        
                bool msb = true; // starts with MSB, then LSB
                for (; Wire.available() && count < length && (timeout == 0 || millis() - t1 < timeout);) {
                    if (msb) {
                        // first byte is bits 15-8 (MSb=15)
                        data[count] = Wire.read() << 8;
                    } else {
                        // second byte is bits 7-0 (LSb=0)
                        data[count] |= Wire.read();
                        #ifdef I2CDEV_SERIAL_DEBUG
                            Serial.print(data[count], HEX);
                            if (count + 1 < length) Serial.print(" ");
                        #endif
                        count++;
                    }
                    msb = !msb;
                }
        
                Wire.endTransmission();
            }
    #elif (I2CDEV_IMPLEMENTATION == I2CDEV_BUILTIN_FASTWIRE)

            HAL_StatusTypeDef ret;

            ret = HAL_I2C_Mem_Read(&I2cHandle, (uint16_t)(devAddr << 1), regAddr, I2C_MEMADD_SIZE_16BIT, (uint8_t *)data, length, timeout);

            if( ret == HAL_OK )
            {
              count = length;
            }
            else
            {
                count = -1;
            }

    #endif

    if (timeout > 0 && millis() - t1 >= timeout && count < length) count = -1; // timeout

    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.print(". Done (");
        Serial.print(count, DEC);
        Serial.println(" read).");
    #endif
    
    return count;
}

bool I2Cdev::writeBytes(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint8_t* data) {
    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.print("I2C (0x");
        Serial.print(devAddr, HEX);
        Serial.print(") writing ");
        Serial.print(length, DEC);
        Serial.print(" bytes to 0x");
        Serial.print(regAddr, HEX);
        Serial.print("...");
    #endif
    uint8_t status = 0;
    #if (I2CDEV_IMPLEMENTATION == I2CDEV_ARDUINO_WIRE)
        Wire.beginTransmission(devAddr);
        Wire.write((uint8_t) regAddr); // send address

    for (uint8_t i = 0; i < length; i++) {
        #ifdef I2CDEV_SERIAL_DEBUG
            Serial.print(data[i], HEX);
            if (i + 1 < length) Serial.print(" ");
        #endif
            Wire.write((uint8_t) data[i]);
    }
    status = Wire.endTransmission();

    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.println(". Done.");
    #endif
  #else
        HAL_StatusTypeDef ret;

        ret = HAL_I2C_Mem_Write(&I2cHandle, (uint16_t)(devAddr << 1), regAddr, I2C_MEMADD_SIZE_8BIT, data, length, 100);

        if( ret == HAL_OK )
        {
          status = 0;
        }
        else
        {
          status = 1;
        }
  #endif
  return status == 0;
}

bool I2Cdev::writeWords(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint16_t* data) {
    #ifdef I2CDEV_SERIAL_DEBUG
        Serial.print("I2C (0x");
        Serial.print(devAddr, HEX);
        Serial.print(") writing ");
        Serial.print(length, DEC);
        Serial.print(" words to 0x");
        Serial.print(regAddr, HEX);
        Serial.print("...");
    #endif
    uint8_t status = 0;
    #if (I2CDEV_IMPLEMENTATION == I2CDEV_ARDUINO_WIRE)
        Wire.beginTransmission(devAddr);
        Wire.write(regAddr); // send address

        for (uint8_t i = 0; i < length * 2; i++) {
        #ifdef I2CDEV_SERIAL_DEBUG
            Serial.print(data[i], HEX);
            if (i + 1 < length) Serial.print(" ");
        #endif
        Wire.write((uint8_t)(data[i] >> 8));    // send MSB
        Wire.write((uint8_t)data[i++]);         // send LSB
        }
        status = Wire.endTransmission();
        #ifdef I2CDEV_SERIAL_DEBUG
        Serial.println(". Done.");
        #endif
    #else
        HAL_StatusTypeDef ret;

        ret = HAL_I2C_Mem_Write(&I2cHandle, (uint16_t)(devAddr << 1), regAddr, I2C_MEMADD_SIZE_16BIT, (uint8_t *)data, length, 100);

        if( ret == HAL_OK )
        {
          status = 0;
        }
        else
        {
          status = 1;
        }
    #endif
    return status == 0;
}
