==> Qtsho/flight-controller-armcortexm0/TivaC123_MPU6050_2/I2CDev/I2Cdev.cpp <==
#include "I2Cdev.h"

int8_t I2Cdev::readBytes(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint8_t *data, uint16_t timeout) {
    int8_t count = 0;
    unsigned long t1 = SysCount;
            for (uint8_t k = 0; k < length; k += min(length, BUFFER_LENGTH)) {
               uint8_t buffer=(uint8_t)min(length - k, BUFFER_LENGTH); //Wire.requestFrom(devAddr, (uint8_t)min(length - k, BUFFER_LENGTH));
                //........................................
                I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, false); //Wire.beginTransmission(devAddr);
                I2CMasterDataPut(I2C1_BASE, regAddr);            //Wire.send(regAddr);
                I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_SINGLE_SEND); //Wire.endTransmission();
                while (I2CMasterBusy(I2C1_BASE));
                I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, true);
                I2CMasterControl(I2C1_BASE,I2C_MASTER_CMD_BURST_RECEIVE_START);
                while (I2CMasterBusy(I2C1_BASE));
                data[0]=I2CMasterDataGet(I2C1_BASE);

                //....................................................
                for (count=1; count<(buffer-1) &&(timeout == 0 || SysCount - t1 < timeout); count++) {
                    I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_RECEIVE_CONT);
                    while (I2CMasterBusy(I2C1_BASE));
                    data[count] = I2CMasterDataGet(I2C1_BASE);

                }
                I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);
                while (I2CMasterBusy(I2C1_BASE));
                data[count] = I2CMasterDataGet(I2C1_BASE);

               // Wire.endTransmission();
            }
    // check for timeout
    if (timeout > 0 && SysCount - t1 >= timeout && count < length) count = -1; // timeout
    return count;
}

int8_t I2Cdev::readWords(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint16_t *data, uint16_t timeout) {
    int8_t count = 0;
    unsigned long t1 = SysCount;
      for (uint8_t k = 0; k < length * 2; k += min(length * 2, BUFFER_LENGTH)) {
                I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, false); //Wire.beginTransmission(devAddr);
                I2CMasterDataPut(I2C1_BASE, regAddr);            //Wire.send(regAddr);
                I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_SINGLE_SEND); //Wire.endTransmission();
                while (I2CMasterBusy(I2C1_BASE));
                //.....................................
                I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, true);
                I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_RECEIVE_START);
                while (I2CMasterBusy(I2C1_BASE));
                data[0]=I2CMasterDataGet(I2C1_BASE)<<8;
                I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_RECEIVE_CONT);
                while (I2CMasterBusy(I2C1_BASE));
                data[0]|=I2CMasterDataGet(I2C1_BASE);
                //.........................
                bool msb = true; // starts with MSB, then LSB
                for (count=1;count < length-1 && (timeout == 0 || SysCount - t1 < timeout);) {
                    I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_RECEIVE_CONT);
                    while (I2CMasterBusy(I2C1_BASE));
                    if (msb) {
                        // first byte is bits 15-8 (MSb=15)
                        data[count] = I2CMasterDataGet(I2C1_BASE) << 8;
                    } else {
                        // second byte is bits 7-0 (LSb=0)
                        data[count] |= I2CMasterDataGet(I2C1_BASE);
                        count++;
                    }
                    msb = !msb;
                }
                I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_RECEIVE_CONT);
                while (I2CMasterBusy(I2C1_BASE));
                data[count] = I2CMasterDataGet(I2C1_BASE) << 8;
                I2CMasterControl(I2C1_BASE,I2C_MASTER_CMD_BURST_RECEIVE_FINISH);
                while (I2CMasterBusy(I2C1_BASE));
                data[count] |= I2CMasterDataGet(I2C1_BASE);
            }


    if (timeout > 0 && SysCount - t1 >= timeout && count < length) count = -1; // timeout

    return count;
}

bool I2Cdev::writeBytes(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint8_t* data) {

        I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, false); // Set to write mode
        I2CMasterDataPut(I2C1_BASE, regAddr); // Place address into data register
        I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_START); // Send start condition
        while (I2CMasterBusy(I2C1_BASE))
                  ; // Wait until transfer is done
//        I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, false); // Set to write mode
//        I2CMasterDataPut(I2C1_BASE, data[0]);
//        I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_START);
//        while (I2CMasterBusy(I2C1_BASE))
//                         ; // Wait until transfer is done
        uint8_t i = 0;
        for (i = 0; i < length - 1; i++)
        {
            I2CMasterDataPut(I2C1_BASE, data[i]); // Place data into data register
            I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_CONT); // Send continues condition
            while (I2CMasterBusy(I2C1_BASE))
                ; // Wait until transfer is done
        }

        I2CMasterDataPut(I2C1_BASE, data[length-1]); // Place data into data register
        I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_FINISH); // Send finish condition
        while (I2CMasterBusy(I2C1_BASE))
            ; // Wait until transfer is done
    return true;
}

bool I2Cdev::writeWords(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint16_t* data) {

           I2CMasterSlaveAddrSet(I2C1_BASE, devAddr, false); //Wire.beginTransmission(devAddr);
           I2CMasterDataPut(I2C1_BASE, regAddr);            //Wire.send(regAddr);
           I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_START);
            while(I2CMasterBusy(I2C1_BASE));
            uint8_t i = 0;
           for (i = 0; i <2*(length-1); i++) {

           I2CMasterDataPut(I2C1_BASE, (uint8_t)(data[i]>>8));// Wire.send((uint8_t)(data[i] >> 8));     // send MSB
           I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_CONT);
           while(I2CMasterBusy(I2C1_BASE));
           I2CMasterDataPut(I2C1_BASE, (uint8_t)data[i++]);// Wire.send((uint8_t)data[i++]);          // send LSB
           I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_CONT);
           while(I2CMasterBusy(I2C1_BASE));
    }
    I2CMasterDataPut(I2C1_BASE, (uint8_t) (data[i] >> 8)); // Wire.send((uint8_t)(data[i] >> 8));     // send MSB
    I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_CONT);
    while (I2CMasterBusy(I2C1_BASE))
        ;
    I2CMasterDataPut(I2C1_BASE, (uint8_t) data[i++]); // Wire.send((uint8_t)data[i++]);          // send LSB
    I2CMasterControl(I2C1_BASE, I2C_MASTER_CMD_BURST_SEND_FINISH);
    while (I2CMasterBusy(I2C1_BASE))
        ;

    return true;
}
